{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 40,
  "lineage": "427d2b0c-69c8-cbb4-092c-95f5a1e71615",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:642764457572:internet-gateway/igw-0cb5a339fa7a047d8",
            "id": "igw-0cb5a339fa7a047d8",
            "owner_id": "642764457572",
            "tags": {
              "Name": "internet_gateway-default"
            },
            "tags_all": {
              "Name": "internet_gateway-default"
            },
            "vpc_id": "vpc-0d02e824c151fc678"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:642764457572:route-table/rtb-0a1affb9e67fb5e8e",
            "id": "rtb-0a1affb9e67fb5e8e",
            "owner_id": "642764457572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb5a339fa7a047d8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table-default"
            },
            "tags_all": {
              "Name": "route_table-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02e824c151fc678"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ac62150dfaa7936",
            "route_table_id": "rtb-0a1affb9e67fb5e8e",
            "subnet_id": "subnet-065ac5096836fbd19"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_subnet_route_table",
            "aws_subnet.subnet_public_v1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a14368f784ebfb2",
            "route_table_id": "rtb-0a1affb9e67fb5e8e",
            "subnet_id": "subnet-0d04f2dadb5263265"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_subnet_route_table",
            "aws_subnet.subnet_public_v2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:642764457572:security-group/sg-07738d81063bc4486",
            "description": "test rds module",
            "egress": [],
            "id": "sg-07738d81063bc4486",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "security_group_name-default",
            "name_prefix": "",
            "owner_id": "642764457572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group-default"
            },
            "tags_all": {
              "Name": "security_group-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d02e824c151fc678"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_v1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:642764457572:subnet/subnet-065ac5096836fbd19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065ac5096836fbd19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "642764457572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_public_v1-default"
            },
            "tags_all": {
              "Name": "subnet_public_v1-default"
            },
            "vpc_id": "vpc-0d02e824c151fc678"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:642764457572:subnet/subnet-0d04f2dadb5263265",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04f2dadb5263265",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "642764457572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_public_v2-default"
            },
            "tags_all": {
              "Name": "subnet_public_v2-default"
            },
            "vpc_id": "vpc-0d02e824c151fc678"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:642764457572:vpc/vpc-0d02e824c151fc678",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c38c6fc2c909d753",
            "default_route_table_id": "rtb-0e80d1d0cbe0e4e7c",
            "default_security_group_id": "sg-04d05db049b640ab1",
            "dhcp_options_id": "dopt-0b021bc6dfc9f863b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d02e824c151fc678",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e80d1d0cbe0e4e7c",
            "owner_id": "642764457572",
            "tags": {
              "Name": "my_vpc-default"
            },
            "tags_all": {
              "Name": "my_vpc-default"
            }
          }
        }
      ]
    }
  ]
}